# tinyremo

./: CMakeLists.txt  README.md  benchmark.cpp  compare.py  eigen.cpp  gen_plots.m  higher.cpp  llt_comparison.cpp  projhess_bench.cpp  projhess_test.cpp  projhess_utils.h  snap.sh  sparse.cpp  spring_comparison.cpp  spring_lambda_probe.cpp  test.cpp  tests.cpp  tinyremo.h  tinyremo_eigen.h
snapshots/: after_step1_iterative_sparse_grad.txt  after_step2_operator_minus.txt  after_step3_operator_div.txt  after_step4_transcendental.txt  after_step5_zero_check.txt  after_step6_reserve.txt  after_step7_hessian_buffer.txt  after_step9_vector_worklist.txt  before_step1_iterative_sparse_grad.txt  before_step2_operator_minus.txt  before_step3_operator_div.txt  before_step4_transcendental.txt  before_step5_zero_check.txt  before_step6_reserve.txt  before_step7_hessian_buffer.txt  before_step8_sparse_grad_emplace.txt  before_step9_vector_worklist.txt
